# apex_pilot

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README.md
backend/: README.md  pyproject.toml
backend/src/apex_pilot/: __init__.py
backend/src/apex_pilot/agent/: __init__.py
backend/src/apex_pilot/api/: __init__.py  app.py  auth.py  routes.py  runtime.py  sql_sheet.py
backend/src/apex_pilot/events/: __init__.py  activity.py
backend/src/apex_pilot/interactive/: __init__.py  browse.py  pool.py  sessions.py
backend/src/apex_pilot/mcp/: __init__.py  client.py  connections.py  connmgr.py  sqlcl.py
backend/src/apex_pilot/projects/: __init__.py  errors.py  preflight.py  service.py
backend/src/apex_pilot/safety/: __init__.py  classifier.py
backend/src/apex_pilot/schema/: __init__.py  intelligence.py
backend/tests/: test_activity_log.py  test_api_vertical_slice.py  test_connmgr_show.py  test_database_source_parser.py  test_database_source_service.py  test_health.py  test_interactive_browse.py  test_interactive_idle_api.py  test_interactive_idle_policy.py  test_interactive_oracle_pool.py  test_interactive_pool_api.py  test_interactive_source_api.py  test_mcp_client.py  test_mcp_session_recovery.py  test_project_api.py  test_project_wizard.py  test_schema_intelligence.py  test_session_schema.py  test_sql_safety_classifier.py  test_sql_sheet_api.py  test_sqlcl_connections.py  test_sqlcl_mcp_service.py  test_sqlcl_preflight.py  test_storage_foundation.py
frontend/: .prettierignore  (+6 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
(+228 files in other folders)
