[package]
name = "apex-pilot"
version = "0.1.0"
description = "Apex Pilot desktop shell."
authors = ["Apex Pilot contributors"]
edition = "2021"
license = "MIT"

[package.metadata]

[lib]
name = "apex_pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10.1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
